# cg-shop-2025

./: .gitignore  .gitmodules  BUILD.bazel  MODULE.bazel  README.md  pyproject.toml
.github/workflows/: common.yml
data/example_instances_rev1/: cgshop2025_examples_ortho_100_5b9b478f.instance.json  cgshop2025_examples_ortho_10_ff68423e.instance.json  cgshop2025_examples_ortho_150_a39ede60.instance.json  cgshop2025_examples_ortho_20_b099d1fe.instance.json  cgshop2025_examples_ortho_250_d9594e89.instance.json  cgshop2025_examples_ortho_40_e5365b34.instance.json  cgshop2025_examples_ortho_60_f31194db.instance.json  cgshop2025_examples_ortho_80_f9b89ad1.instance.json  cgshop2025_examples_point-set_100_5da0b4c3.instance.json  cgshop2025_examples_point-set_10_b4ff36df.instance.json  cgshop2025_examples_point-set_150_3334f8a1.instance.json  cgshop2025_examples_point-set_20_9816a49d.instance.json  cgshop2025_examples_point-set_250_c4545664.instance.json  cgshop2025_examples_point-set_40_16c501a5.instance.json  cgshop2025_examples_point-set_60_340abec8.instance.json  cgshop2025_examples_point-set_80_3d8b193e.instance.json  cgshop2025_examples_simple-polygon-exterior-20_100_a61e9aed.instance.json  cgshop2025_examples_simple-polygon-exterior-20_10_a557fecb.instance.json  cgshop2025_examples_simple-polygon-exterior-20_150_b988b15c.instance.json  cgshop2025_examples_simple-polygon-exterior-20_20_80175658.instance.json  cgshop2025_examples_simple-polygon-exterior-20_250_329290ff.instance.json  cgshop2025_examples_simple-polygon-exterior-20_40_97467655.instance.json  (+18 more)
scripts/: check-format.sh  format-files.sh  visualisation.py
src/: BUILD.bazel  Edge.cpp  Edge.hpp  Plgs.cpp  Point.cpp  Point.hpp  Pslg.hpp  Triangle.cpp  Triangle.hpp  Utils.cpp  Utils.hpp  WORKSPACE.bazel
test/: BUILD.bazel  TestEdge.cpp  TestJsonLibrary.cpp  TestPoint.cpp  TestPslg.cpp  TestTriangle.cpp  main.cpp
